--- a/Portal/appsettings.json
+++ b/Portal/appsettings.json
@@ -7,5 +7,12 @@
     "LogLevel": {
       "Default": "Warning"
     }
-  }
+  },
+  "DIServices": [
+    {
+      "serviceType": "Service.IUserService",
+      "implementationType": "Service.Impl.UserService",
+      "lifetime": "Scoped"
+    }
+  ]
 }
