--- a/Portal/Portal.csproj
+++ b/Portal/Portal.csproj
@@ -13,9 +13,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Repository.Dapper\Repository.Dapper.csproj" />
-    <ProjectReference Include="..\Repository\Repository.csproj" />
     <ProjectReference Include="..\Service\Service.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Infrastructure\Filters\" />
+    <Folder Include="Infrastructure\Middlewares\" />
   </ItemGroup>
 
 </Project>
