--- a/Portal/appsettings.Staging.json
+++ b/Portal/appsettings.Staging.json
@@ -11,8 +11,8 @@
     }
   },
   "CookieOptions": {
-    "Domain": "localhost",
-    "Name": "cookieName",
+    "Domain": "",
+    "Name": "",
     "Path": "/"
   }
 }
